--- a/src/app/components/PlantInfoCard.module.css
+++ b/src/app/components/PlantInfoCard.module.css
@@ -5,10 +5,11 @@
 .PlantInfo {
   position: relative;
   margin: 0 auto;
-  max-width: 400px;
+  max-width: 900px;
   border: 1px solid white;
   border-radius: 10px;
   padding: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .Sprouted {
@@ -19,5 +20,9 @@
 @media (prefers-color-scheme: light) {
   .Card {
     border-color: black;
+  }
+
+  .PlantInfo {
+    background-color: rgba(255, 255, 255, 0.5);
   }
 }
